--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food-network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="section1">
+        <div>
+            <h1 class="all-h1">
+                <span class="span-1">Skip</span> The Diet,
+            <br>
+                    Just Eat Healthy
+            <br>
+                    With Food Network
+            </h1>
+            <h2 class="all-h2">Imagine you don't need a diet because we provide healthy and delicious food for you!</h2>
+            <a class="a-link" target="_blank" href="https://github.com/always-mohammad-ali">Order Food</a>
+        </div>
+        <div>
+            <img src="images/female/Group 8425.png" alt="female's picture">
+        </div>
+    </section>
+
     
 </body>
 </html>
